--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -12,7 +12,10 @@ django==3.2.14
     # via
     #   -r requirements.in
     #   djangohexadecimalfield
+    #   djangorestframework
 djangohexadecimalfield==0.0.3
+    # via -r requirements.in
+djangorestframework==3.13.1
     # via -r requirements.in
 iniconfig==1.1.1
     # via pytest
@@ -37,7 +40,9 @@ pytest-django==4.5.2
 python-dotenv==0.20.0
     # via -r requirements.in
 pytz==2022.1
-    # via django
+    # via
+    #   django
+    #   djangorestframework
 sqlparse==0.4.2
     # via django
 tomli==2.0.1
