models are about to end

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -17,5 +17,8 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+    location /api/ {
+        proxy_pass http://backend:8000;
+    }
 
 }
