--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,6 +2,10 @@ version: '3.3'
 services:
   db:
     image: postgres:13.0-alpine
+    environment:
+      - POSTGRES_USER=foodgram_user
+      - POSTGRES_PASSWORD=xxxyyyzzz
+      - POSTGRES_DB=foodgram
     volumes:
       - /var/lib/postgresql/data/
     env_file:
