--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -22,6 +22,10 @@ services:
     build:
       context: ../backend
       dockerfile: Dockerfile
+    command: >
+      sh -c "python3 manage.py collectstatic --noinput &&
+             python3 manage.py migrate &&
+             gunicorn --bind 0.0.0.0:8000 foodgram.wsgi"
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
