--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,4 +5,4 @@ RUN pip3 install -r /app/requirements.txt --no-cache-dir
 COPY foodgram/ /app
 WORKDIR /app
 LABEL author='mv_rogozov'
-CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
+#CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
