--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Hub
+      - name: Push to Docker Hub backend
         uses: docker/build-push-action@v2
         with:
           context: backend
           push: true
           tags: mvrogozov/foodrgam
+
+      - name: Push to Docker Hub frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: frontend
+          push: true
+          tags: mvrogozov/foodgram
 
   deploy:
     runs-on: ubuntu-latest
