--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
-          sudo docker-compose down
-          sudo docker rmi -f $(sudo docker images -aq)
+          
           sudo docker-compose pull
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
@@ -57,7 +56,7 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
-          sudo docker-compose exec -T web python3 manage.py collectstatic --no-input
+          sudo docker-compose exec -T backend python3 manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
