--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - POSTGRES_PASSWORD=xxxyyyzzz
       - POSTGRES_DB=foodgram
     volumes:
-      - .db:/var/lib/postgresql/data/
+      - ./db:/var/lib/postgresql/data/
     env_file:
       - ./.env
   frontend:
