--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   db:
     image: postgres:13.0-alpine
     environment:
-      - POSTGRES_USER=foodgram_user
-      - POSTGRES_PASSWORD=xxxyyyzzz
-      - POSTGRES_DB=foodgram
+      POSTGRES_USER: "foodgram_user"
+      POSTGRES_PASSWORD: "xxxyyyzzz"
+      POSTGRES_DB: "foodgram"
     volumes:
       - ./db:/var/lib/postgresql/data/
     env_file:
