--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,10 +2,6 @@ version: '3.3'
 services:
   db:
     image: postgres:13.0-alpine
-    environment:
-      POSTGRES_USER: "foodgram_user"
-      POSTGRES_PASSWORD: "xxxyyyzzz"
-      POSTGRES_DB: "foodgram"
     volumes:
       - ./db:/var/lib/postgresql/data/
     env_file:
@@ -18,7 +14,7 @@ services:
       #- backend
   backend:
     image: mvrogozov/fg_backend
-    restart: always
+    #restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
