--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ COPY requirements/requirements.txt /app
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
 COPY foodgram/ /app
 WORKDIR /app
-#RUN chmod +x docker-entrypoint.sh
-#ENTRYPOINT [ "./docker-entrypoint.sh" ]
+RUN chmod +x docker-entrypoint.sh
+ENTRYPOINT [ "./docker-entrypoint.sh" ]
 LABEL author='mv_rogozov'
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
