--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,8 @@ jobs:
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
           sudo docker-compose exec -T backend python3 manage.py collectstatic --no-input
+          sudo docker-compose exec -T backend python3 manage.py migrate --no-input
+          sudo docker-compose exec -T backend python3 manage.py loaddata localdata.json
 
   send_message:
     runs-on: ubuntu-latest
