--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
           sudo docker-compose up -d
           sudo docker-compose exec -T backend python3 manage.py collectstatic --no-input
           sudo docker-compose exec -T backend python3 manage.py migrate --no-input
-          sudo docker-compose exec -T backend python3 manage.py loaddata localdata.json
+          sudo docker-compose exec -T backend python3 manage.py loaddata data.json
 
   send_message:
     runs-on: ubuntu-latest
