--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,6 +7,9 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
