--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,11 @@
 server {
     listen 80;
+    location /media/ {
+      root /var/html/;
+    }
+    location /static/ {
+      root /var/html/;
+    }
     location /api/ {
         proxy_pass http://backend:8000;
     }
@@ -10,6 +16,7 @@ server {
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
     }
+    
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
