--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     image: mvrogozov/fg_backend
     restart: always
     volumes:
-      - ./static_value:/app/static/
-      - ./media_value:/app/media/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
@@ -32,8 +32,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - ./static_value:/var/html/static/
-      - ./media_value:/var/html/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
 volumes:
   static_value:
   media_value:
