--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -25,10 +25,10 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-    location /media/ {
-      root /var/html/;
-    }
-    location /static/ {
-      root /var/html/;
-    }
+    #location /media/ {
+     # root /var/html/;
+    #}
+    #location /static/ {
+    #  root /var/html/;
+    #}
 }
