--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,8 +10,6 @@ services:
     image: mvrogozov/fg_frontend
     volumes:
       - ../frontend/:/app/result_build/
-    #depends_on:
-      #- backend
   backend:
     image: mvrogozov/fg_backend
     restart: always
@@ -27,7 +25,7 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - backend
+      - frontend
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
