--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,16 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
+    server_tokens off;
     
+	  location /media/ {
+		    root /var/html/;
+	  }
+    location /static/admin/ {
+        root /var/html/;
+    }
     location /api/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api/;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -25,10 +33,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-    #location /media/ {
-     # root /var/html/;
-    #}
-    #location /static/ {
-    #  root /var/html/;
-    #}
 }
