--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - media_value:/var/html/mediafiles/recipes/
 volumes:
   static_value:
   media_value:
