--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,9 @@
 FROM python:3.7-slim
 RUN apt-get update
-RUN mkdir /app
-COPY requirements/requirements.txt /app
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
-COPY foodgram/ /app
+#RUN mkdir /app
 WORKDIR /app
-#RUN chmod +x docker-entrypoint.sh
-#ENTRYPOINT [ "./docker-entrypoint.sh" ]
+COPY requirements/requirements.txt .
+RUN pip3 install -r /app/requirements.txt --no-cache-dir
+COPY ./ .
 LABEL author='mv_rogozov'
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
