--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.7-slim
 RUN apt-get update
-#RUN mkdir /app
 WORKDIR /app
-COPY requirements/requirements.txt .
+#RUN mkdir /app
+COPY requirements/requirements.txt /app
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
-COPY ./ .
+COPY foodgram/ .
+#WORKDIR /app
 LABEL author='mv_rogozov'
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
